# VernamVeil

./: .buildinfo  .flake8  .gitignore  README.html  README.md  bytesearch.html  deniability_utilities.html  deniability_utils.html  fx_utilities.html  fx_utils.html  genindex.html  hash_utilities.html  hash_utils.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  test_vernamveil.py  vernamveil.html  vernamveil.py  vernamveil_class.html
.doctrees/: README.doctree  bytesearch.doctree  deniability_utilities.doctree  deniability_utils.doctree  environment.pickle  fx_utilities.doctree  fx_utils.doctree  hash_utilities.doctree  hash_utils.doctree  index.doctree  vernamveil.doctree  vernamveil_class.doctree
.doctrees/nphash/: README.doctree
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  lint.yml
_sources/: README.md.txt  fx_utils.rst.txt  hash_utilities.rst.txt  index.rst.txt  vernamveil.rst.txt
_static/: custom.css
docs/: bytesearch.rst  conf.py  deniability_utils.rst  fx_utilities.rst  fx_utils.rst  hash_utilities.rst  hash_utils.rst  index.rst
docs/_static/: custom.css
nphash/: README.html  README.md  __init__.py  _bmh.h  _bytesearch.c  _bytesearch.h  _kmp.c  _kmp.h  _npblake2b.c  _npblake3.c  _npblake3.h  _nphkdf.c  _npsha256.c  build.py  fold_bytes.h
nphash/_build_utils/: _blake3_builder.py  _build_config.py  _config_builder.py  _ffi_builders.py
nphash/_utils/: _blake3_build_utils.py  _build_config.py  _ffi_compilers.py
nphash/c/: bmh.h  bytesearch.c  npblake3.c  npblake3.h
nphash_c_ext_trigger/: __init__.py  pyproject.toml
npsha256/: README.md  __init__.py  _npsha256.c  _npsha256.py  build.py
tests/: test_buffer.py  test_bytesearch.py  test_cli.py  test_deniability_utils.py  test_find.py  test_fx_utils.py  test_hash_utils.py  test_numpy_sha256.py  test_vernamveil.py
vernamveil/: __init__.py  _buffer.py  _bytesearch.py  _cli.py  _cypher.py  _deniability_utils.py  _find.py  _fx_utils.py  _hash_utils.py  _imports.py  _types.py  _vernamveil.py  cache.py  cli.py  cypher.py  fx_utils.py  hash_utils.py
