[project]
name = "vernamveil"
version = "0.1.0"
description = "VernamVeil is a modular, symmetric stream cypher inspired by One-Time Pad. It features customisable keystream generation, synthetic IV seed initialisation, stateful seed evolution for avalanche effects, authenticated encryption, and layered message obfuscation. Supports vectorised operations and optional C-backed hashing for performance. Designed for educational and experimental use."
authors = [
    { name = "Vasilis Vryniotis", email = "datumbox@github.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

urls = { "Homepage" = "https://github.com/datumbox/vernamveil" }

[project.optional-dependencies]
dev = [
    "black>=25.1",
    "flake8>=7.2",
    "isort>=6.0",
    "mypy>=1.15",
    "pdoc>=15.0",
]
numpy = [
    "numpy>=2.2"
]
cffi = [
    "cffi>=1.15"
]

[project.scripts]
vernamveil = "vernamveil.cli:main"

[build-system]
requires = ["setuptools>=68.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = false

[tool.setuptools.packages.find]
include = ["vernamveil", "nphash"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true

[tool.isort]
profile = "black"
line_length = 100

