[project]
name = "vernamveil"
version = "0.1.0"
description = "VernamVeil is a modular, symmetric stream cypher inspired by One-Time Pad. It features customisable keystream generation, synthetic IV seed initialisation, stateful seed evolution for avalanche effects, authenticated encryption, and layered message obfuscation. Supports vectorised operations and optional C-backed hashing for performance. Designed for educational and experimental use."
authors = [
    { name = "Vasilis Vryniotis", email = "datumbox@github.com" }
]
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }

urls = { "Homepage" = "https://github.com/datumbox/vernamveil" }

[project.optional-dependencies]
dev = [
    "black>=25.1",
    "darglint>=1.8",
    "flake8>=7.2",
    "isort>=6.0",
    "mypy>=1.16",
    "myst_parser>=4.0",
    "pydocstyle>=6.3",
    "sphinx>=8.1",
    "sphinx-autodoc-typehints>=3.2",
    "sphinx_rtd_theme>=3.0",
    "types-setuptools>=80.9"
]
numpy = [
    "numpy>=2.3"
]
cffi = [
    "cffi>=1.17"
]

[project.scripts]
vernamveil = "vernamveil._cli:main"

[build-system]
requires = ["setuptools>=80.9", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
strict = true

[tool.setuptools.packages.find]
include = ["vernamveil", "nphash"]

[tool.setuptools.package-data]
"vernamveil" = ["py.typed"]
"nphash" = ["py.typed", "_bytesearchffi.*.so", "_npblake2bffi.*.so", "_npblake3ffi.*.so", "_npsha256ffi.*.so"]
